# approximate-nearest-neighbors

./: .gitignore  CMakeLists.txt  Makefile  README.md  make-ann  make-annimport  make-test
.github/workflows/: ci.yaml
configs/: ann.mk  ann.mk.conf  annimport.mk  annimport.mk.conf  config.mk  filterann.mk  filterann.mk.conf  filterannimport.mk.conf  groundtruthcalc.mk.conf  test.mk.conf
experiment-results/: filterann_mean.xlsx  stitched_filterann.csv
makefiles/: make-ann.mk  make-filterann.mk  make-test.mk  single-run.mk  template.mk
plot-scripts/: ann.py  csv_to_excel.py  filterann.py  template.py  utils.py
src/main/cpp/: ann.cpp  filterann.cpp  main.cpp  main2.cpp
src/main/cpp/ann/: main.cpp
src/main/cpp/ann/DataSet/: DataSet.cpp  DataSet.h
src/main/cpp/ann/Graph/: Graph.cpp  Graph.h
src/main/cpp/annimport/: main.cpp
src/main/cpp/filterann/: main.cpp
src/main/cpp/filterann/DataPoint/: DataPoint.cpp  DataPoint.h
src/main/cpp/filterann/FilterDataset/: FilterDataset.cpp  FilterDataset.h
src/main/cpp/filterann/FilterGraph/: FilterGraph.cpp  FilterGraph.h
src/main/cpp/filterann/FilterQuerySet/: FilterQuerySet.cpp  FilterQuerySet.h
src/main/cpp/filterann/Query/: Query.cpp  Query.h
src/main/cpp/filterannimport/: main.cpp
src/main/cpp/groundtruthcalc/: main.cpp
src/main/cpp/utility/DataPoint/: DataPoint.cpp  DataPoint.h
src/main/cpp/utility/DataSet/: DataSet.cpp  DataSet.h
src/main/cpp/utility/Edge/: Edge.cpp  Edge.h
src/main/cpp/utility/FilterDataset/: FilterDataset.cpp  FilterDataset.h
src/main/cpp/utility/FilterGraph/: FilterGraph.cpp  FilterGraph.h
src/main/cpp/utility/FilterQuerySet/: FilterQuerySet.cpp  FilterQuerySet.h
src/main/cpp/utility/Graph/: Graph.cpp  Graph.h
src/main/cpp/utility/InputSetDivider/: InputSetDivider.cpp  InputSetDivider.h
src/main/cpp/utility/Query/: Query.cpp  Query.h
src/main/cpp/utility/SortedContainer/: SortedContainer.cpp  SortedContainer.h
src/main/cpp/utility/Utils/: Utils.cpp  Utils.h
src/main/cpp/utility/VamanaContainer/: VamanaContainer.cpp  VamanaContainer.h
src/main/cpp/utility/VectorFileType/: VectorFileType.cpp  VectorFileType.h
src/main/cpp/utility/Vertex/: Vertex.cpp  Vertex.h
src/tests/cpp/: test_addEdge.cpp  test_addVertex.cpp  test_filter_greedySearch.cpp  test_filter_vamana.cpp  test_filterannimport.cpp  test_filteredRobustPrune.cpp  test_findMedoid.cpp  test_greedySearch.cpp  test_medoid.cpp  test_robustPrune.cpp  test_stitched_vamana.cpp  test_vamana.cpp  test_vamanaContainer.cpp
src/tests/temp/: test_filter_greedySearch.cpp  test_filter_vamana.cpp  test_filteredRobustPrune.cpp  test_findMedoid.cpp
test/: Makefile  graph_test.cpp  test_addEdge.cpp  test_addVertex.cpp  test_initializeRandomEdge.cpp  test_medoid.cpp
tests/: Makefile  test_addEdge.cpp  test_addVertex.cpp  test_filter_greedySearch.cpp  test_filter_vamana.cpp  test_filteredRobustPrune.cpp  test_findMedoid.cpp  test_greedySearch.cpp  test_initializeRandomEdge.cpp  test_medoid.cpp  test_robustPrune.cpp  test_vamana.cpp  tests.cpp
